# kde-theme-installer

./: .gitignore  README.md  design_doc.md  kde-theme-installer.desktop  pyproject.toml  requirements.txt
kde_theme_installer/: __init__.py  companion_finder.py  fetch_and_extract.py  gui.py  installer.py  ocs_client.py  pipeline.py
scripts/: diagnose_missing_thumbnail.py  install_sddm_theme.py  kde_store_diagnostic.py  lookup_content_types.py
src/: companion_finder.py  fetch_and_extract.py  gui.py  installer.py  pipeline.py
tests/: smoke_test_companion_finder.py  smoke_test_fetch_and_extract.py  smoke_test_installer.py  smoke_test_ocs_client.py  smoke_test_pipeline.py  smoke_test_thumbnails.py
